--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ header{
 }
 .logo img{
     width: 6rem;
+    margin-top: 4.7rem;
 }
 
 header nav ul{
@@ -435,7 +436,6 @@ color: #333;
 
 .offers{
     height: 65vh;
-    margin-bottom: 10rem;
     width: 100%;
     background-image: url(/images/students-walking-though-university-hall-w1920x480.avif);
     background-position: center;
@@ -498,3 +498,267 @@ color: #333;
     background-color: #fff;
     border-radius: 5px;
 } 
+
+
+.flying-exper{
+    height: 120vh;
+    width: 100%;
+    text-align: center;
+    padding-inline: 13rem;
+    padding-bottom: 20rem;
+    background-image: url(/images/seafood-meal-first-class-black-and-white.avif);
+    background-repeat: no-repeat;
+}
+.special2{
+    font-family: HelveticaNeue, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+    font-size: 11px;
+    font-weight: 600;
+    color: #666;
+    text-transform: uppercase;
+    margin: 0;
+    padding-top: 2.7rem;
+    letter-spacing: .2rem;
+    line-height: 0.2rem;
+    color: rgb(59, 59, 59);
+    opacity: .69;
+
+}
+.fly-h{
+    font-family: Emirates-Bold, Helvetica, Arial, Lucida Grande, sans-serif;
+    font-size: 45px;
+    line-height: 3.75rem;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    line-height: 6rem;
+    color: #000;
+    margin: 0 auto;
+    font-weight: 600;
+}
+
+.fly-p{
+    font-family: HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+    font-size: 15px;
+    line-height: 1.61rem;
+    font-weight: 200;
+    color: #000;
+    margin: 0;
+    line-height: 2rem;
+    margin-bottom: 3rem;
+}
+.grids{
+    width: 100%;
+    gap: 1%;
+    height: 100%;
+    display: flex;
+    margin-top: rem;
+}
+.grid1{
+    width: 50%;
+    height: 100%;
+    background-image: url(/images/dubai-downtown.avif);
+    background-position: bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: left;
+    padding: 2rem 4rem 0rem 2.5rem;
+    border: 1px solid rgb(200, 200, 200);
+}
+.grid2{
+    width: 50%;
+    height: 100%;
+    display: grid;
+    gap: 2%;
+    grid-template-columns: 1fr 1fr;
+}
+.grid{
+    border: 1px solid rgb(200, 200, 200);
+    padding: 1rem;
+}
+.grid:first-child{
+    background-image: url(/images/first-class-dessert.avif);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.grid:nth-child(2){
+    background-image: url(/images/business-class-meal.avif);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.grid:nth-child(3){
+    background-image: url(/images/premium-economy-menu.avif);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.grid:nth-child(4){
+    background-image: url(/images/economy-class-chocolate-dessert.avif);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.special3{
+    font-family: HelveticaNeue, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+    font-size: 10px;
+    line-height: 1.38rem;
+    font-weight: 790;
+    letter-spacing: .4rem;
+    text-transform: uppercase;
+    line-height: 1.5rem;
+    color: #666;
+    margin-bottom: 2rem;
+
+}
+.grid-h{
+    font-family: Emirates-Bold, Helvetica, Arial, Lucida Grande, sans-serif;
+    font-size: 2.9rem;
+    line-height: 3.53rem;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    position: relative;
+    margin-bottom: 0;
+    color: #333;
+}
+.special4{
+    font-family: HelveticaNeue, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+    font-weight: 600;
+    font-size: 11.5px;
+    letter-spacing: .2rem;
+    text-transform: uppercase;
+    line-height: 1.5rem;
+    color: #666;
+
+}
+.grid-h0{
+    font-family: Emirates-Bold, Helvetica, Arial, Lucida Grande, sans-serif;
+    font-size: 22px;
+    line-height: 2.53rem;
+    font-style: italic;
+    font-weight: 550;
+    -webkit-font-smoothing: antialiased;
+    position: relative;
+    margin-bottom: 0;
+    color: #333;
+}
+
+.about{
+    height: 50vh;
+    width: 100%;
+    padding-inline: 10rem;
+}
+.about h2{
+    font-family: Emirates-Bold, Helvetica, Arial, Lucida Grande, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-size: 30px;
+    padding-top: 47px;
+    margin: 0;
+    display: block;
+    text-align: center;
+    margin-bottom: 1.6rem;
+}
+.about p{
+    font-family: HelveticaNeue, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+    font-size: 14px;
+    text-align: center;
+    line-height: normal;
+    color: #333;
+    font-weight: 300;
+    margin-bottom: 2rem;
+}
+.slide{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 60% ;
+
+    padding-inline: 13rem;
+}
+
+.about img{
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+}
+.slide-img{
+
+    height: 100%;
+    width: 10rem;
+    display: block;
+    text-align: center;
+    align-items: center;
+}
+.slide-img a{
+    color: #000;
+    font-size: 14px ;
+    font-weight: 600;
+    text-decoration: underline;
+}
+
+
+
+
+
+
+.footer {
+    background-color: #333333;
+    padding: 20px 0;
+}
+.footer-container {
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.footer-section {
+    flex: 1 1 200px;
+    margin: 10px;
+}
+.footer-section h3 {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+.footer-section ul li {
+    margin-bottom: 8px;
+}
+.footer-section ul li a {
+    color: #ffffff;
+    text-decoration: none;
+}
+.footer-section ul li a:hover {
+    text-decoration: underline;
+}
+.subscribe {
+    margin-top: 20px;
+}
+.subscribe input[type="email"] {
+    padding: 10px;
+    width: 70%;
+    border: none;
+    margin-right: 10px;
+}
+.subscribe input[type="submit"] {
+    padding: 10px 20px;
+    background-color: #0070c9;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+.apps {
+    margin-top: 20px;
+}
+.apps img {
+    margin-right: 10px;
+}
+.social {
+    margin-top: 20px;
+}
+.social img {
+    margin-right: 10px;
+}
