--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,12 @@ header nav a{
     font-size: 14px;
     font-weight: 600;
 }
+@media (max-width:750px) {
+    header{
+    height: 3.5rem;
+    padding-inline: 10rem;
+    }
+}
 #hero{
     height: 150vh;
 }
