--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,15 @@ a{
     text-decoration: none;
 }
 .head{
-   
     background-color: #FEF8D5;
     padding-left: 100px;
     list-style: none;
     align-content: center;
     height: 3rem;
 }
-
+.head i{
+    color: black;
+}
 .Important{
     color: red;
 }
@@ -51,7 +52,7 @@ header{
     background-color: #363636;
     height: 3.5rem;
     align-items: center;
-    padding-inline: 15rem;
+    padding-inline: 15%;
 }
 .logo{
     background-color: #d71921;
@@ -162,7 +163,7 @@ header nav a{
     float: right;
 
     }
-#hero button{
+.hero-btn{
     float: right;
     width: 9.5rem;
     height: 2.5rem;
@@ -172,8 +173,8 @@ header nav a{
     font-weight: 600;
     border-radius: 4px;
     border: none;
-
     }
+
 .travel-form{
     height: 50vh;
     width: 100%;
@@ -260,7 +261,29 @@ header nav a{
     height: 4rem;
     width: 100%;
     gap: 5%;
+
  }
+ .flight{
+    height: 2.9rem;
+    border-radius: 5px;
+    margin-bottom: 3rem;
+}
+.flight-btn{
+    float: left;
+    width: 9.0rem;
+    height: 2.3rem;
+    background-color: #fff;
+    color: #000;
+    font-size: 13px;
+    font-weight: 600;
+    border: 1px solid black;
+    cursor: pointer;
+    }
+.flight-btn:hover{
+    box-shadow: 0px 10px 10px rgb(220, 220, 220);
+    background-color: #fff;
+
+}
  .from{
     display: block;
     font-size: 1.2rem;
@@ -326,7 +349,7 @@ header nav a{
     border-right: 0.01px solid grey;
     text-align: center;
     align-items: center;
-    padding: 3rem 0rem;
+    padding: 2.5rem 0rem;
     cursor: pointer;
     display: block;
 }
@@ -336,6 +359,9 @@ header nav a{
 }
 .box i{
     color: grey;
+    font-size: 27px;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
 }
 .box a{
     color: grey;
@@ -348,11 +374,49 @@ header nav a{
 .box li a:hover{
     color: #000;
 }
-.choice img
-{
-    height: 5rem;
+.choiceimg-container{
+    height: 4rem;
+    align-items: center;
+    display: flex;
+    gap: 1%;
     width: 100%;
+    background-color: #000;
+    background-image: url(/images/background-test-tier.png);
+    background-position: center;
+    background-size: contain;
+    color: #000;
+    border-radius: 7px;
+    padding-left: 3rem;
 }
+.choice img{
+    height: 6rem;
+    width: 20%;
+    z-index: 3;
+}
+span{
+    font-size: 19px;
+    font-weight: 580;
+}
+.choiceimg-container p{
+    color: white;
+    font-size: 16px;
+}
+.white-btn{
+        padding-top: 0rem;
+}
+    .white-btn {
+        padding: 0.5rem 2.8rem;
+        text-decoration: none;
+        color: #000;
+        font-size: 13px;
+        font-weight: 600;
+        background-color: #fff;
+        border-radius: 5px;
+        margin-left: 5
+        rem;
+    } 
+
+
 
 
 
@@ -685,14 +749,15 @@ color: #333;
     width: 10rem;
     height: 10rem;
     border-radius: 50%;
+    margin-bottom: 0.5rem;
 }
 .slide-img{
-
     height: 100%;
     width: 10rem;
     display: block;
     text-align: center;
     align-items: center;
+
 }
 .slide-img a{
     color: #000;
@@ -783,6 +848,43 @@ color: #333;
 .apps img {
     margin-right: 10px;
 }
-.social img {
+.social i {
     margin-right: 10px;
+    font-size: 39px;
+    font-weight: 100;
+    color: #000;
+}
+.footer-img{
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 15rem;
+    display: flex;
+    padding: 2.2rem 0rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-bottom: 0.5px solid grey;
+}
+
+.footer-img img{
+    width: 15rem;
+    cursor: pointer;
+}
+.f-nav {
+    width: 70%;
+    margin: 2rem 15rem;
+    line-height: 1.9;
+    color: #fff;
+    font-size: 13px;
+}
+.f-nav ul{
+    display: flex;
+    gap: 1rem;
+    list-style: none;
+}
+.f-nav li a{
+    text-decoration: none;
+    color: grey;
+    padding: 0rem;
+    font-size: 14px;
+    font-weight: 510;
 }
