--- a/css/style.css
+++ b/css/style.css
@@ -1056,7 +1056,8 @@ color: #333;
 
 /*STYLING FOR THE MANAGE PAGE*/
 .manage-hero{
-    
+    height:187vh;
+    width: 100%;
 }
 .manage-list{
     list-style-type: disc;
