--- a/css/style.css
+++ b/css/style.css
@@ -956,7 +956,7 @@ color: #333;
 
  .book-form_body{
     display: block;
-    height: 14book-3rem;
+    height: 14.3rem;
     width: 100%;
     padding: 1rem; 
 
@@ -1102,3 +1102,20 @@ color: #333;
     color: #000;
     font-family: HelveticaNeue-Bold, Arial, Lucida Grande, sans-serif;
 }
+.manage-landing_form{
+    height: 10.3rem;
+    width: 100%;
+    align-items: center;
+    box-shadow: 0px 10px 10px rgb(220, 220, 220);
+    margin-bottom: 9rem;
+
+}
+/* END OF FORM IN LANDING PAGE */
+
+ .manage-form_body{
+    display: block;
+    height: 10.3rem;
+    width: 100%;
+    padding: 1rem; 
+
+ }
