--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ header nav a{
     height: 150vh;
 }
 .back{
-    height: 67vh;
+    height: 59vh;
     width: 100%;
     background-image: url(/images/view-of-dubai-canal-at-sunset-hp-w1920x480.avif);
     background-position: center;
@@ -113,7 +113,7 @@ header nav a{
 }
 .float{
   width: 100%;
-  height: 15vh;
+  height: 7vh;
 }
 .float img{
     width: 10rem;
@@ -136,6 +136,7 @@ header nav a{
     -webkit-font-smoothing: antialiased;
     font-weight: 400;
     padding-left: 15rem;
+    margin-top: 2.5rem;
     transform: rotate(0deg) scale(1) skew(-13deg) translate(0);
 }
 .norm{
@@ -188,7 +189,7 @@ header nav a{
     height: 17rem;
     width: 100%;
     align-items: center;
-    border-radius: ;
+    /* border-radius: ; */
     box-shadow: 0px 10px 10px rgb(220, 220, 220);
 
 }
@@ -234,7 +235,7 @@ header nav a{
     border-bottom: 4px solid red;
  }
  .red:hover{
-    background-color: ;
+    /* background-color: ; */
  }
  .form_nav li:hover{
    box-shadow: #363636;
