--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,6 @@ color:#000;
     color:blue;
     }
 
-
 header{
     display: flex;
     justify-content: space-between;
@@ -98,7 +97,45 @@ header nav a{
 @media (max-width:750px) {
     header{
     height: 3.5rem;
-    padding-inline: 10rem;
+    padding-inline: 10px;
+    }
+    .logo{
+        height: 7rem;
+        margin-top: 3.5rem;
+        width: 4.5rem;
+    }
+    .logo img{
+        margin-top: 3.0em;
+        width: 4.5rem;
+    }
+    header nav ul{
+        display: none;
+    }
+    .head{
+        padding-left: 5px;
+    }
+    .head i{
+        font-size: 12px;
+    }
+    .Important{
+        font-size: 12px;
+    }
+    .Important a{
+    font-size: 12px;
+    letter-spacing: -1;
+    word-spacing: -0.1rem;
+    }
+    .call_to_action i{
+        font-size: 10px;
+    }
+    .call_to_action li:nth-of-type(2){
+        display: none;
+    }
+    .call_to_action a{
+
+        padding: 0.3rem;
+        font-size: 11px;
+        font-weight: 400;
     }
 }
 #hero{
@@ -175,7 +212,53 @@ header nav a{
     border-radius: 4px;
     border: none;
     }
-
+@media (max-width:750px) {
+    .back{
+        height: 60vh;
+    }
+    .float{
+        width: 100%;
+        height:  4rem;
+      }
+      .float img{
+        width: 6rem;
+        float: right;
+        margin-right: 0rem;
+        margin-top: 1.5rem;
+    }
+    .text{
+        height: 43vh;
+        width: 100%;
+    }
+    .slant{
+        font-size: 1.5rem;
+        padding-left: 1rem;
+        margin-top: 1.5rem;
+    }
+    .norm{
+        height: 13.7rem;
+        padding-top: 4rem;
+        padding-left: 1rem;
+    }
+    .hotel{
+        font-size: 3.56rem;
+        margin-bottom: 1rem;
+        }
+    .hero__description{
+        color: #fff;
+        font-size: 1.2rem;
+        padding-right: 9.4rem;
+        padding-left: 0rem;
+        float: right;
+    
+        }
+    .hero-btn{
+        float: right;
+        width: 9rem;
+        height: 2.5rem;
+        margin-right: 9.4rem;
+        }
+}
 .travel-form{
     height: 50vh;
     width: 100%;
@@ -206,7 +289,6 @@ header nav a{
     display: flex;
     height: 3.5rem;
     width: 100%;
-    align-items: center;
     text-align: center;
  }
  .form_nav li:first-child,
@@ -239,6 +321,39 @@ header nav a{
  }
  .form_nav li:hover{
    box-shadow: #363636;
+ }
+ @media (max-width:750px) {
+    .travel-form{
+        height: 50vh;
+        margin-top: 0rem;
+        padding-inline: 1rem;
+    }
+        
+    .landing_form{
+        height: 17rem;
+    }
+    .form_nav li:first-child,
+    .form_nav li:last-child{
+       padding-inline: 0rem;
+    }
+    .form_nav li:nth-child(3){
+       padding-inline: 0rem;
+    }
+   
+    .form_nav li{
+       text-align: center;
+       padding-inline: 0rem;
+    }
+    .form_nav li i{
+        font-size: 11px;
+     }
+    .form_nav ul a{
+        color: black;
+        text-decoration: none;
+        font-size: 12px;
+        
+       }
+
  }
 
 /* END OF FORM IN LANDING PAGE */
@@ -324,7 +439,25 @@ header nav a{
     background-color: rgb(197, 197, 197);
     color: black; 
 }
-
+@media (max-width:750px) {
+    .form_body{
+        padding: 0.5rem; 
+     }
+    .flight-btn{
+        width: 4.0rem;
+        height: 1.7rem;
+        font-size: 11px;
+    }
+    .mini_landing input{
+        width: 7rem;
+        padding: 0rem;
+        font-size: 0.8rem;
+     }
+     .mini_landing button{
+        padding: 0.5rem;
+        font-size: 0.8rem;
+     }
+}
 
 .choice{
     height: 7.5rem;
