--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,7 @@ header nav a{
         width: 4.0rem;
         height: 1.7rem;
         font-size: 11px;
+        margin-top: 1rem;
     }
     .mini_landing input{
         width: 7rem;
@@ -463,8 +464,6 @@ header nav a{
     height: 7.5rem;
     width: 100%;
     padding-inline: 10rem;
-
-
 }
 .boxes{
     display: flex;
@@ -489,7 +488,6 @@ header nav a{
 }
 .box li{
     list-style: none;
-    
 }
 .box i{
     color: grey;
@@ -538,22 +536,72 @@ span{
 .white-btn{
         padding-top: 0rem;
 }
-    .white-btn {
-        padding: 0.5rem 2.8rem;
-        text-decoration: none;
-        color: #000;
+.white-btn {
+    padding: 0.5rem 2.8rem;
+    text-decoration: none;
+    color: #000;
+    font-size: 13px;
+    font-weight: 600;
+    background-color: #fff;
+    border-radius: 5px;
+    margin-left: 5
+    rem;
+} 
+@media (max-width:750px) {
+    .choice{
+        height: 17.5rem;
+        width: 100%;
+        padding-inline: 0.5rem;
+    }
+    .boxes{
+        display: grid;
+        grid-template-columns:1fr 1fr 1fr 1fr;
+        height: 50%;
+        border: 0.01px solid grey;
+    }
+    
+    .box{
+        width: 100%;
+        height: 100%;
+        border: 0.01px solid grey;
+        padding: 0rem 0rem;
+    }
+    .box i{
+        font-size: 17px;
+        margin-top: 0.8rem;
+    }
+    .box a{
+        color: grey;
+        text-decoration: underline;
+        font-size: 11px;
+    }
+    .choiceimg-container{
+        gap: 0.5%;
+        width: 100%;
+        padding-inline: 0.5rem;
+    }
+    .choice img{
+        height: 5.6rem;
+        width: 25%;
+    }
+    span{
         font-size: 13px;
-        font-weight: 600;
-        background-color: #fff;
-        border-radius: 5px;
-        margin-left: 5
-        rem;
-    } 
+    }
+    .choiceimg-container p{
+        font-size: 11px;
+    }
+    .white-btn{
+        padding-top: 0rem;
+    }
+        .white-btn {
+            padding: 0.3rem 0.9rem;
+            font-size: 10px;
+            font-weight: 400;
+            margin-left: 0.5rem;
+        } 
+}
 
-
-
-
-
+/* DESTINATION STYLING */
 .destination{
     height: 140vh;
     width: 100%;
@@ -612,7 +660,6 @@ span{
     margin-bottom: 0;
 
 }
-
 .disco{
 font-family: HelveticaNeue, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
 font-size: 17px;
@@ -637,7 +684,32 @@ color: #333;
 .dest-btn:hover{
     box-shadow: 0px 10px 10px rgb(220, 220, 220);
 }
+@media (max-width:750px) {
+    .destination{
+        height: 270vh;
+        padding-inline: 1rem;
+    }
+    .destinationcard{
+        display: grid;
+        width: 100%;
+        height: 234vh;
+        grid-gap: 5%;
+        grid-template-columns: 1fr ;
+    }
+    .cardtext{
+        height: 50%;
+        width: 100%;
+        padding: 1.5rem 3.5rem;
+    }
+    .dest-btn{
+        width: 13.5rem;
+        height: 2.5rem;
+        margin-top: 2rem;
+    }
+}
 
+
+/* OFFERS STYLING */
 .offers{
     height: 65vh;
     width: 100%;
